# polymart

./: .env.example  .gitignore  ISSUES.md  Makefile  README.md  docker-compose.yml  mkdocs.yml
backend/: .dockerignore  Dockerfile  conftest.py  manage.py  pyproject.toml
backend/config/: __init__.py  asgi.py  celery.py  logging.py  middleware.py  observability.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/src/application/: __init__.py
backend/src/application/access/: ports.py  use_cases.py
backend/src/application/address/: ports.py  use_cases.py
backend/src/application/audit/: ports.py  read.py  recorder.py
backend/src/application/cart/: ports.py  use_cases.py
backend/src/application/catalog/: ports.py  use_cases.py
backend/src/application/channel/: ports.py  use_cases.py
backend/src/application/health/: ports.py  use_cases.py
backend/src/application/identity/: admin_use_cases.py  ports.py  use_cases.py
backend/src/application/inventory/: ports.py  use_cases.py
backend/src/application/order/: ports.py  use_cases.py
backend/src/application/payment/: ports.py  use_cases.py
backend/src/application/shared/: events.py  owner.py
backend/src/application/shipping/: ports.py  use_cases.py
backend/src/application/tax/: ports.py  use_cases.py
backend/src/application/wallet/: ports.py  use_cases.py
backend/src/domain/: __init__.py
backend/src/domain/access/: exceptions.py  permissions.py  registry.py
backend/src/domain/address/: entities.py  exceptions.py  value_objects.py
backend/src/domain/audit/: entities.py  exceptions.py
backend/src/domain/cart/: entities.py  exceptions.py  services.py  value_objects.py
backend/src/domain/catalog/: entities.py  enums.py  exceptions.py  permissions.py  services.py  value_objects.py
backend/src/domain/channel/: entities.py  exceptions.py  permissions.py  value_objects.py
backend/src/domain/health/: entities.py
backend/src/domain/identity/: entities.py  enums.py  exceptions.py  permissions.py  value_objects.py
backend/src/domain/inventory/: entities.py  exceptions.py  permissions.py  services.py  value_objects.py
backend/src/domain/order/: entities.py  events.py  exceptions.py  permissions.py  services.py  value_objects.py
backend/src/domain/payment/: entities.py  events.py  exceptions.py  value_objects.py
backend/src/domain/shared/: events.py
backend/src/domain/shipping/: __init__.py  entities.py  exceptions.py  services.py  value_objects.py
backend/src/domain/tax/: exceptions.py  services.py  value_objects.py
backend/src/domain/wallet/: entities.py  exceptions.py  value_objects.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/access/: apps.py  gateway.py  (+2 more)
backend/src/interface/: __init__.py
backend/tests/integration/: test_cors.py  test_openapi_schema.py
(+598 files in other folders)
