[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymart"
version = "0.0.1"
description = "Polymart backend - white-label, multi-niche e-commerce platform."
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
    "django-cors-headers>=4.3",
    "celery>=5.3",
    "redis>=5.0",
    "django-guardian>=2.4",
    "djangorestframework-simplejwt>=5.3",
    "structlog>=24.1",
    "gunicorn>=21.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
observability = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-django>=0.46b0",
    "opentelemetry-instrumentation-psycopg>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "opentelemetry-instrumentation-celery>=0.46b0",
]

[tool.setuptools.packages.find]
include = ["config*", "src*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "DJ", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["mypy_django_plugin.main"]

# OpenTelemetry is an optional extra. Treat it as untyped so type-checking is
# identical whether or not the `observability` extra is installed (CI installs
# only `[dev]`; the native venv installs `[dev,observability]`). Without this,
# the installed otel package trips `attr-defined` on `trace.get_current_span`.
[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["."]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "--strict-markers --cov=src --cov=config --cov-report=term-missing --cov-fail-under=90"
markers = [
    "integration: tests that require a database or external service",
]

[tool.coverage.run]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    # Settings and process entry points are configuration/bootstrap, not logic:
    # they are validated by smoke imports and the prod-settings guard tests, not
    # by line coverage.
    "config/settings/*",
    "config/wsgi.py",
    "config/asgi.py",
    "config/celery.py",
]
